k8s/0120.policy/0100.require-namespace.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-namespace
  annotations:
    policies.kyverno.io/title: "Require Namespace"
    policies.kyverno.io/category: "Enforcement"
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-namespace
      match:
        resources:
          kinds:
            - ConfigMap
            - CronJob
            - Deployment
            - Ingress
            - Job
            - PersistentVolumeClaim
            - Pod
            - Service
          namespaces:
            - infra
      validate:
        message: "Metadata 'namespace' is required"
        foreach:
          - list: "request.object.metadata"
            pattern:
              namespace: "?*"
